# lottie_qt

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  DESIGN_CHOICES.txt  Implementation.txt  README.md
.github/workflows/: super-linter.yml
app/: AnimationWidget.cpp  AnimationWidget.h  CMakeLists.txt  main.cpp  timeline_widget.cpp  timeline_widget.h  timelinewidget.ui
src/: AutoProfiler.h  CMakeLists.txt  common_types.h  lottielib.h
src/LayerContainers/: AnimationContainer.cpp  AnimationContainer.h  CompositionLayer.cpp  CompositionLayer.h  CompositionLayerFactory.cpp  CompositionLayerFactory.h  NullCompositionLayer.cpp  NullCompositionLayer.h  ShapeCompositionLayer.cpp  ShapeCompositionLayer.h  TransformedPaintBuffer.cpp  TransformedPaintBuffer.h  solid_composition_layer.cpp  solid_composition_layer.h
src/LayerContainers/AnimationNodes/: AnimationNodeFactory.cpp  AnimationNodeFactory.h  EllipseNode.cpp  EllipseNode.h  FillNode.cpp  FillNode.h  GroupNode.cpp  GroupNode.h  ShapeNode.cpp  ShapeNode.h  ShapeNodeInterface.h  ShapeTransformationNode.cpp  ShapeTransformationNode.h  StrokeNode.cpp  StrokeNode.h  TransformationNode.cpp  TransformationNode.h  TrimNode.cpp  TrimNode.h  polystar_node.cpp  polystar_node.h  rectangle_node.cpp  rectangle_node.h  repeater_node.cpp  repeater_node.h
src/Model/: Animation.cpp  Animation.h  composition.cpp  composition.h
src/Model/Keyframes/: KeyFrame.h  KeyFrameGroup.h
src/Model/Layers/: LayerFactory.cpp  LayerFactory.h  LayerModel.cpp  LayerModel.h  ShapeLayer.cpp  ShapeLayer.h  layer.cpp  layer.h  layer_factory.cpp  shape_layer.cpp  solid_layer.cpp  solid_layer.h
src/Model/ShapeItems/: Ellipse.cpp  Ellipse.h  Fill.cpp  Fill.h  Group.cpp  Group.h  Merge.cpp  Merge.h  Shape.cpp  Shape.h  ShapeFactory.cpp  ShapeFactory.h  ShapeItem.cpp  ShapeItem.h  ShapeTransformation.cpp  ShapeTransformation.h  Stroke.cpp  Stroke.h  Trim.cpp  Trim.h  polystar.cpp  polystar.h  rectangle.cpp  rectangle.h  repeater.cpp  repeater.h
src/Model/property_system/: constant_property.h  keyframe_property.h  property.h  property_factory.h  property_update_listener.h  update_listener.h
src/Model/shape_items/: ellipse.h  fill.cpp  fill.h  group.h  merge.cpp  merge.h  polystar.cpp  rectangle.h  repeater.cpp  repeater.h  shape.cpp  shape.h  shape_item.cpp  stroke.cpp  trim.cpp
src/NodeRenderSystem/NodeProperties/: AnyValueContainer.h  AnyValueProvider.h  NodeProperty.h
src/NodeRenderSystem/NodeProperties/ValueProviders/: KeyFrameValueProvider.h  SingleValueProvider.h
src/Utility/Interpolatable/: Interpolatable.h
src/Utility/Primitives/: BezierPath.cpp  BezierPath.h  CurveVertex.cpp  CurveVertex.h  DashElement.cpp  DashElement.h  PathElement.cpp  PathElement.h  Transformation.cpp  Transformation.h  Utility.h  Vector1D.h  bezier_path.cpp  dash_element.cpp  dash_element.h  keypath_searchable.h
src/Utility/value_provider/: keyframe_value_provider.h
src/composition/: AnimationContainer.cpp  AnimationContainer.h  CompositionLayerFactory.cpp  CompositionLayerFactory.h  NullCompositionLayer.cpp  NullCompositionLayer.h  ShapeCompositionLayer.cpp  ShapeCompositionLayer.h  animation_container.cpp  animation_container.h  base_composition_layer.cpp  base_composition_layer.h  composition_layer_factory.cpp  composition_layer_factory.h  null_composition_layer.cpp  shape_composition_layer.cpp  shape_composition_layer.h  solid_composition_layer.cpp  solid_composition_layer.h
src/composition/AnimationNodes/: AnimationNodeFactory.cpp  AnimationNodeFactory.h  EllipseNode.cpp  EllipseNode.h  FillNode.cpp  FillNode.h  GroupNode.cpp  GroupNode.h  ShapeNode.cpp  ShapeNode.h  ShapeNodeInterface.h  ShapeNodeInterface.h.QxLCjc  ShapeTransformationNode.cpp  ShapeTransformationNode.h  StrokeNode.cpp  StrokeNode.h  TransformationNode.cpp  TransformationNode.h  TrimNode.cpp  TrimNode.h  animation_node.h  compound_trim_path.cpp  compount_trim_path.cpp  compount_trim_path.h  ellipse_node.cpp  ellipse_node.h  fill_node.cpp  fill_node.h  group_node.cpp  group_node.h  path_algorithm.cpp  path_node.h  polystar_node.cpp  polystar_node.h  rectangle_node.cpp  rectangle_node.h  repeater_node.cpp  repeater_node.h  shape_path_node.cpp  stroke_node.cpp  (+3 more)
src/composition/animation_nodes/: animation_node.h  animation_node_factory.cpp  ellipse_node.cpp  ellipse_node.h  fill_node.cpp  fill_node.h  group_node.cpp  group_node.h  path_algorithm.cpp  path_algorithm.h  polystar_node.cpp  polystar_node.h  rectangle_node.cpp  rectangle_node.h  repeater_node.cpp  repeater_node.h  shape_node.cpp  shape_node.h  shape_path_node.cpp  shape_path_node.h  shape_transformation_node.cpp  shape_transformation_node.h  stroke_node.cpp  stroke_node.h  transformation_node.cpp  transformation_node.h  trim_node.cpp  trim_node.h
src/composition/interfaces/: painting_element.h  trim_element.h
src/model/: composition.h
src/model/keyframes/: keyframe.h
src/model/layers/: layer.cpp  layer.h  shape_layer.h
src/model/property_system/: constant_property.h  property.h
src/model/shape_items/: ellipse.cpp  group.cpp  merge.cpp  polystar.h  rectangle.cpp  repeater.h  shape.cpp  shape_factory.cpp  shape_item.h  shape_transformation.cpp  shape_transformation.h  stroke.cpp  stroke.h  trim.cpp  trim.h
src/parser/: check.cpp  check.h  lottie_parser.cpp  lottie_parser.h
src/parser/lottie/: composition_parser.cpp  composition_parser.h  property_parser.h
src/utility/interpolatable/: interpolatable.h
src/utility/primitives/: bezier_path.cpp  bezier_path.h  curve_vertex.cpp  path_element.cpp  path_element.h  transformation.cpp  transformation.h  utility.h
tests/: CMakeLists.txt
tests/parser/: test_check.cpp
